--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
       content="FoxSayChat description"
     />
     <title>FoxSayChat</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
